site/docs/spark/2.1.1/documentation.md
---
layout: page
title: Extensions for Apache Spark
description: Extensions for Apache Spark
group: nav-right
---
<!--
{% comment %}
Licensed to the Apache Software Foundation (ASF) under one or more
contributor license agreements.  See the NOTICE file distributed with
this work for additional information regarding copyright ownership.
The ASF licenses this file to you under the Apache License, Version 2.0
(the "License"); you may not use this file except in compliance with
the License.  You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
{% endcomment %}
-->

{% include JB/setup %}

### Apache Bahir Extensions for Apache Spark 2.1.1

<br/>

#### SQL  Data Sources

[Apache CouchDB/Cloudant data source](../spark-sql-cloudant)

<br/>

#### Structured Streaming Data Sources

[Akka data source](../spark-sql-streaming-akka)

[MQTT data source](../spark-sql-streaming-mqtt)

<br/>

#### Discretized Streams (DStreams) Connectors

[Akka connector](../spark-streaming-akka)

[Google Cloud Pub/Sub connector](../spark-streaming-pubsub)

[MQTT connector](../spark-streaming-mqtt)

[Twitter connector](../spark-streaming-twitter)

[ZeroMQ connector](../spark-streaming-zeromq)
